Started design time feature implementation as per this tutorial: https://docs.microsoft.com/en-us/dotnet/framework/winforms/controls/creating-a-wf-control-design-time-features

--- a/WinForms-PickerControl/WinForms-PickerControl.csproj
+++ b/WinForms-PickerControl/WinForms-PickerControl.csproj
@@ -38,6 +38,7 @@
     <Compile Include="FontBuilder.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="HorizontalPickerDesigner.cs" />
     <Compile Include="Picker.cs">
       <SubType>Component</SubType>
     </Compile>
